[gd_scene load_steps=8 format=2]

[ext_resource path="res://Evaluation.gd" type="Script" id=1]
[ext_resource path="res://textures/abstract-art-decoration-1029624.jpg" type="Texture" id=2]
[ext_resource path="res://custom_font.tres" type="Theme" id=3]
[ext_resource path="res://StarBtn.tscn" type="PackedScene" id=4]
[ext_resource path="res://textures/full_button_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://connectors/RESTRequest.tscn" type="PackedScene" id=6]
[ext_resource path="res://loading_screen.tscn" type="PackedScene" id=7]

[node name="Evaluation" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -166.0
margin_right = 166.0
margin_bottom = 265.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="CheckBox" type="Label" parent="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 33.0
margin_top = 85.0
margin_right = 274.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
text = "Family friendly"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="StarBtn" parent="Panel/CheckBox" index="0" instance=ExtResource( 4 )]

margin_left = 256.0
margin_right = 296.0
margin_bottom = 32.0
focus_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 156.0
margin_top = 25.0
margin_right = 332.0
margin_bottom = 57.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="StarBtn1" parent="Panel/HBoxContainer" index="0" instance=ExtResource( 4 )]

margin_right = 32.0
margin_bottom = 32.0
focus_mode = 2

[node name="StarBtn2" parent="Panel/HBoxContainer" index="1" instance=ExtResource( 4 )]

margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
focus_mode = 2

[node name="StarBtn3" parent="Panel/HBoxContainer" index="2" instance=ExtResource( 4 )]

margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
focus_mode = 2

[node name="StarBtn4" parent="Panel/HBoxContainer" index="3" instance=ExtResource( 4 )]

margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
focus_mode = 2

[node name="StarBtn5" parent="Panel/HBoxContainer" index="4" instance=ExtResource( 4 )]

margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
focus_mode = 2

[node name="Label2" type="Label" parent="Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 33.0
margin_top = 25.0
margin_right = 146.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 3 )
text = "Quality"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="VoteBtn" type="Button" parent="Panel" index="3"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 15.5
margin_top = -80.0
margin_right = 142.5
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Vote"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Theme" ]

[node name="LoginBtn" type="Button" parent="Panel" index="4"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -141.5
margin_top = -80.0
margin_right = -14.5
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Login"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Theme" ]

[node name="ServerList" type="ItemList" parent="Panel" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 34.0
margin_top = 134.0
margin_right = -31.0
margin_bottom = -104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
items = [  ]
select_mode = 1
allow_reselect = true
allow_rmb_select = true
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "custom_fonts" ]

[node name="Label" type="Label" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -322.0
margin_top = 45.0
margin_right = 9.0
margin_bottom = 78.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.145098, 0.145098, 0.164706, 1 )
text = "How was the puzzle?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="RESTRequest" parent="." index="3" instance=ExtResource( 6 )]

[node name="loading_screen" parent="." index="4" instance=ExtResource( 7 )]

[connection signal="toggled" from="Panel/HBoxContainer/StarBtn1" to="." method="_on_StarBtn1_toggled"]

[connection signal="pressed" from="Panel/HBoxContainer/StarBtn2" to="." method="_on_StarBtn2_pressed"]

[connection signal="pressed" from="Panel/HBoxContainer/StarBtn3" to="." method="_on_StarBtn3_pressed"]

[connection signal="pressed" from="Panel/HBoxContainer/StarBtn4" to="." method="_on_StarBtn4_pressed"]

[connection signal="pressed" from="Panel/HBoxContainer/StarBtn5" to="." method="_on_StarBtn5_pressed"]

[connection signal="pressed" from="Panel/VoteBtn" to="." method="_on_VoteBtn_pressed"]

[connection signal="pressed" from="Panel/LoginBtn" to="." method="_on_LoginBtn_pressed"]


